# OpenGraphicsUI

./: .gitignore  CMakeLists.txt  Makefile  README.md  class_structure  main.cpp
include/3DObject/: GameObject.h  Mesh.h
include/Buffer/: EBO.h  VAO.h  VBO.h  texture.h
include/EventHandler/: Actions.h  EventHandler.h  EventType.h
include/Json/: serializer_types.h
include/Renderer/: Renderer.h
include/Scene/: Scene.h  Scene2D.h  Scene3D.h  SceneManager.h
include/TextRenderer/: Character.h  FontLoader.h  TextRenderer.h
include/UILoader/: UILoader.h
include/UIManager/: UIManager.h
include/glad/: glad.h
include/shader/: shader.h
include/ui/: Appearance.h  Shape.h  UIBuilder.h  UIFactory.h  ui.h
lib/: assimp-vc143-mt.lib
resources/Shaders/: default.frag  default.vert
resources/Shaders/menu/: default.frag  default.vert
resources/Shaders/menu/3D/: default.vert
resources/font/: font.vert
resources/ui/: ui.json
src/: EBO.cpp  VBO.cpp  glad.c  main.cpp  shader.cpp
src/graphics/: Actions.cpp  Appearance2D.cpp  EBO.cpp  EventHandler.cpp  GameObject.cpp  Scene.cpp  SceneManager.cpp  Shape.cpp  UI.cpp  UIManager.cpp  VAO.cpp  shader.cpp  texture.cpp  ui.cpp
src/graphics/3DObject/: GameObject.cpp
src/graphics/EventHandler/: EventHandler.cpp
src/graphics/Scene/: Scene.cpp  Scene2D.cpp  Scene3D.cpp  SceneManager.cpp
src/graphics/Shader/: shader.cpp
src/graphics/UILoader/: UILoader.cpp
src/imp/Buffer/: EBO.cpp  VAO.cpp  VBO.cpp
src/imp/Debugger/: Debugger.cpp
src/imp/EventHandler/: Actions.cpp  EventHandler.cpp
src/imp/Scene/: Scene.cpp  SceneManager.cpp
src/imp/Shader/: shader.cpp
src/imp/Shape/: Shape.cpp
src/imp/TextRenderer/: FontLoader.cpp  TextRenderer.cpp
src/imp/Texture/: texture.cpp
src/imp/UI/: UIBuilder.cpp  UIFactory.cpp  UILoader.cpp  ui.cpp
